Overflow fixes and other tweaks

--- a/components/Pieces/ImageComponent/index.module.scss
+++ b/components/Pieces/ImageComponent/index.module.scss
@@ -4,6 +4,7 @@
 
 .image {
   opacity: 0;
+  transform: translateZ(0);
   transition: opacity 0.3s ease;
 
   &.loaded {
