--- a/components/Slices/Featured/index.module.scss
+++ b/components/Slices/Featured/index.module.scss
@@ -15,6 +15,7 @@ $progress-bar-gap: 20px;
 .wrapper {
   clip-path: polygon(0% 50%, 100% 50%, 100% 50%, 0% 50%);
   height: 0;
+  overflow: hidden;
   padding-bottom: calc(56.65% + $progress-bar-gap);
   position: relative;
   transform: skewY(-5deg) translateZ(0);
@@ -34,6 +35,7 @@ $progress-bar-gap: 20px;
 
   video {
     background-color: #ccc;
+    display: block;
     height: 100%;
     position: absolute;
     transform: skewY(5deg) scale(1.2);
